--- a/layout02.html
+++ b/layout02.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="base.css" />
   <!-- <link rel="stylesheet" href="/layout01.css" /> -->
   <!-- <link rel="stylesheet" href="/layout02.css" /> -->
-  <!-- <link rel="stylesheet" href="/layout03.css" /> -->
-  <link rel="stylesheet" href="/layout04.css" />
+  <link rel="stylesheet" href="/layout03.css" />
+  <!-- <link rel="stylesheet" href="/layout04.css" /> -->
 </head>
 
 <body>
 
+<section class="section-container">
   <div class="container">
     <div>1</div>
     <div>2</div>
@@ -26,6 +27,8 @@
     <div>9</div>
     <div>10</div>
   </div>
+
+</section>
 
 
 </body>
